8239593: Bogus warning "Re-registering of platform native method" for a JVMTI agent

Reviewed-by: dcubed, alanb, hseigel